--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   "dependencies": {
     "express": "~4.10.6",
     "express-stormpath": "~0.6.0",
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0",
     "jade": "~1.8.2",
     "forms": "~1.1.0",
     "csurf": "~1.6.4",
-    "xtend": "~4.0.0"
+    "xtend": "~4.0.0",
+    "properties": "~1.2.1"
   }
 }
