--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "forms": "~1.1.0",
     "csurf": "~1.6.4",
     "xtend": "~4.0.0",
+    "debug": "~2.0.0",
     "properties": "~1.2.1"
   }
 }
