added ambilight support

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.0.0",
     "properties": "~1.2.1",
     "naturaltime": "~0.0.1",
-    "node-hue-api": "~0.2.6"
+    "node-hue-api": "~0.2.6",
+    "ambilight": "~0.0.5"
   }
 }
