--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ambilight": "^0.2.2",
+    "csurf": "~1.6.4",
+    "debug": "~2.0.0",
     "express": "~4.10.6",
     "express-stormpath": "~0.6.0",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "jade": "~1.8.2",
     "forms": "~1.1.0",
-    "csurf": "~1.6.4",
-    "xtend": "~4.0.0",
-    "debug": "~2.0.0",
-    "properties": "~1.2.1",
+    "jade": "~1.8.2",
+    "morgan": "~1.3.0",
     "naturaltime": "~0.0.1",
-    "node-hue-api": "~0.2.6",
-    "ambilight": "~0.0.5"
+    "node-hue-api": "~0.2.7",
+    "properties": "~1.2.1",
+    "serve-favicon": "~2.1.3",
+    "xtend": "~4.0.0",
+    "prettyjson": "^1.0.0"
   }
 }
